force-app/main/default/objects/Opportunity_Hotel_Junction__c/Opportunity_Hotel_Junction__c.object-meta.xml
<CustomObject>
    <description>Objetc to link an opportunity to several hotel</description>
    <label>Opportunity_Hotel_Junction</label>
    <nameField>
        <label>Opportunity_Hotel_Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunities_Hotels_Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>