force-app/main/default/objects/Opportunity_Hotel_Junction__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <label>Distance (Km)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>