force-app/main/default/objects/Opportunity_Hotel_Junction__c/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName>
    <formula>Hotel__r.Commercial_Hotel_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Name</label>
    <type>Text</type>
</CustomField>